--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,6 @@
   <title> Kids Are Weird </title>
 </head>
 <body>
-  <div img src =  id="image">
+  <div img src ="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js" id="image">
   </div>
 </body>
