--- a/html/index.html
+++ b/html/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
   <div 
-  </div>
+  </div> 
   <script src ="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js" id="image"></script>
   <script>
-    $("#image").append
+    $("#image").append("<img src=''>")
   </script>
 </body>
